# credit_recovery

./: .env.development  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
cases/: admin.py  models.py  serializers.py  urls.py  views.py
cases/migrations/: 0001_initial.py
cases/tests/: conftest.py  test_case_endpoints.py
credit_recovery/: asgi.py  settings.py  urls.py  wsgi.py
customers/: admin.py  models.py  serializers.py  urls.py  views.py
customers/migrations/: 0001_initial.py
customers/models/: __init__.py  address.py  creditor_model.py  debtor_model.py  person.py
customers/serializers/: __init__.py  creditor_serializer.py  debtor_serializer.py  person_serializer_mixin.py
customers/tests/: conftest.py  test_creditor_endpoints.py  test_creditor_serializer.py  test_debtor_endpoints.py  test_debtor_serializer.py
customers/views/: __init__.py  creditor_viewset.py  debtor_viewset.py
